Actualizadas las traducciones.

--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -417,7 +417,7 @@
     "delete-logs": "Aldaketak ezabatu",
     "delete-opening": "Irekitze idazpena ezabatu",
     "delete-record": "Erregistroa ezabatu",
-    "Deleted": "Ezabatua",
+    "Deleted": "Ezabatuta",
     "deleted-model": "Ezabatuta %model% (%key%) %desc%",
     "delivery-note": "Albarana",
     "delivery-note-email-subject": "Zure %code%. albarana",
