--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -195,7 +195,7 @@
     "cant-delete-audit-log": "Impossibile eliminare un registro di audit",
     "cant-delete-default-company": "Impossibile eliminare l'azienda predefinita",
     "cant-delete-default-country": "Impossibile eliminare il paese predefinito",
-    "cant-delete-default-currency": "cant-delete-default-currency",
+    "cant-delete-default-currency": "non è possibile eliminare la valuta predefinita",
     "cant-delete-default-payment-method": "non è possibile eliminare il metodo di pagamento predefinito",
     "cant-delete-default-serie": "cant-delete-default-serie",
     "cant-delete-default-tax": "Impossibile eliminare la tassa predefinita",
@@ -231,8 +231,8 @@
     "choose-doc-type": "Choose document type",
     "choose-employee": "Scegli dipendente",
     "choose-files": "Scegli i file",
-    "choose-payment-method": "Choose payment method",
-    "choose-serie": "Choose serie",
+    "choose-payment-method": "Scegli il metodo di pagamento",
+    "choose-serie": "Scegli serie",
     "choose-source": "Scegli la fonte",
     "cifnif": "CIF\/NIF",
     "cities": "Città",
@@ -373,7 +373,7 @@
     "dashboard-backup": "Backup",
     "dashboard-backup-p": "Vi ricordiamo che avete installato FacturaScripts sul vostro PC, quindi i dati (fatture, clienti, ecc...) vengono memorizzati sul vostro PC e solo sul vostro PC. Fate regolarmente il backup e conservate quei backup lontano dal PC.",
     "dashboard-for": "Dashboard per",
-    "data-source": "Origin data",
+    "data-source": "Origine dei dati",
     "database": "Database",
     "database-error": "Errore di connessione al database",
     "database-name-must-be-lowercase": "il-nome-del-database-deve-essere-maiuscolo",
@@ -494,7 +494,7 @@
     "dto-2": "dto-2",
     "duplicate-record": "record duplicato",
     "duplicated-reference": "Riferimento '%reference%' duplicato",
-    "duplicated-request": "duplicated-request",
+    "duplicated-request": "richiesta duplicata",
     "duration": "durata",
     "edit": "modifica",
     "editable": "Modificabile",
@@ -656,7 +656,7 @@
     "from-accounting-entry": "dall'ingresso in contabilità",
     "from-date": "a partire da",
     "from-subaccount": "from-subaccount",
-    "full-access": "full-access",
+    "full-access": "accesso completo",
     "full-path": "Percorso completo",
     "gap-found": "Gap trovato per il numero %numero%, giorno %fecha%, %codserie% e azienda %idempresa%",
     "general": "Generale",
@@ -684,11 +684,11 @@
     "generated-families": "0 famiglie generate.",
     "generated-invoice": "generated-invoice",
     "generated-manufacturers": "0 produttori generati.",
-    "generated-products": "0 prodotti generati.",
+    "generated-products": "%quantity% prodotti generati.",
     "generated-subaccounts": "0 account secondari generati.",
     "generated-supplier": "0 fornitore generato.",
     "generated-supplier-delivery-notes": "0 ha generato le bolle di consegna del fornitore.",
-    "generated-supplier-estimations": "%quantity% generated supplier estimations.",
+    "generated-supplier-estimations": "%quantity% stime dei fornitori generate.",
     "generated-supplier-orders": "0 ordini fornitore generati.",
     "global-dto": "Sconto complessivo",
     "global-dto-2": "global-dto-2",
@@ -816,7 +816,7 @@
     "journal": "Giornale",
     "journal-closing": "Chiusura giornale",
     "journal-opening": "journal-opening",
-    "journals": "Journals",
+    "journals": "Diari",
     "july": "Luglio",
     "june": "Giugno",
     "justified": "giustificato",
@@ -849,10 +849,10 @@
     "languages-pt_PT": "languages-pt_PT",
     "languages-va_ES": "Lingua va_ES",
     "last-activity": "L'ultima attività",
-    "last-bimester": "last-bimester",
+    "last-bimester": "ultimo bimestre",
     "last-block": "ultimo blocco",
     "last-ip": "Ultimo IP",
-    "last-month": "last-month",
+    "last-month": "mese scorso",
     "last-price-estimation": "Ultima stima del prezzo",
     "last-price-sale": "Último precio de venta",
     "last-purchase-price": "ultimo prezzo d'acquisto",
@@ -904,7 +904,7 @@
     "logo": "logo",
     "logout": "Disconnettersi",
     "logout-ok": "Disconnettersi con successo.",
-    "logs": "Logs",
+    "logs": "registri",
     "long": "Lungo",
     "longitude": "Longitudine",
     "longitude-abb": "Long",
@@ -985,7 +985,7 @@
     "months": "months",
     "more": "more",
     "more-fields": "Altro campi",
-    "more-plugins": "more-plugins",
+    "more-plugins": "più plugin...",
     "move-lines": "Sposta linee",
     "movements": "movements",
     "my-profile": "Il mio profilo",
@@ -1082,7 +1082,7 @@
     "original": "Originale",
     "original-file": "File originale",
     "other-data": "Altri dati",
-    "others-filters": "Others filters",
+    "others-filters": "altri filtri",
     "out-of-stock": "out-of-stock",
     "page": "pagina",
     "page-break": "Salto de página",
@@ -1139,7 +1139,7 @@
     "phones": "Telefoni",
     "php-extension-needed": "È necessaria l'estensione %extension% nella configurazione di PHP",
     "php-extension-not-found": "You don't have the %extension% PHP extension installed.",
-    "php-support-end": "php-support-end",
+    "php-support-end": "Il supporto per PHP %current% terminerà presto. Si prega di aggiornare PHP alla versione %min% o superiore.",
     "physical-stock": "Stock fisico",
     "picking": "Selezione",
     "plan": "Piano",
@@ -1196,7 +1196,7 @@
     "priority": "priorità",
     "private": "privato",
     "private-key": "Chiave privata",
-    "process": "Proceso",
+    "process": "processo",
     "processing": "elaborazione",
     "product": "Prodotto",
     "product-not-found": "Producto %ref% no encontrado",
@@ -1231,7 +1231,7 @@
     "rates": "Aliquote",
     "re": "RE",
     "re-open": "Riaprire",
-    "react": "Reaccionar",
+    "react": "reagire",
     "read-message-by": "Leído por %nick% el %date%",
     "read-more": "Leggi di più",
     "readonly": "sola lettura",
@@ -1258,7 +1258,7 @@
     "refresh": "ricaricare",
     "refresh-page": "Aggiorna pagina",
     "refund-amount": "Importo rimborsato",
-    "refund-payment-concept": "Devolución del recibo %document%",
+    "refund-payment-concept": "Rimborso del documento %document%",
     "refunds": "refunds",
     "register": "registrare",
     "register-installation": "Registra installazione",
@@ -1353,7 +1353,7 @@
     "sent-a-picture": "Ha inviato un'immagine",
     "sent-a-video": "Ha inviato un video",
     "sent-message-by": "Inviato da %nick% il %date%",
-    "sepa-suffix": "sepa-suffix",
+    "sepa-suffix": "suffisso SEPA",
     "september": "Settembre",
     "sequences": "Sequenze",
     "serial-number": "Serial Number",
@@ -1376,14 +1376,14 @@
     "shops": "negozi",
     "short": "Corto",
     "short-name": "Nome breve",
-    "show": "show",
+    "show": "mostrare",
     "show-balance-graphic": "Mostra grafico del saldo",
     "show-crm-warnings": "Mostra avvisi CRM",
     "show-expired-receipts": "Mostra ricevute scadute",
     "show-month-stats": "Mostra statistiche mensili",
     "show-pending-remittances": "Mostrar remesas pendientes",
     "show-price": "Mostra prezzo su stampa",
-    "show-quantity": "Show quantity on print",
+    "show-quantity": "Mostra la quantità sulla stampa",
     "show-section-new": "Mostra sezione creazione",
     "signature": "Firma",
     "simple": "Semplice",
@@ -1436,7 +1436,7 @@
     "subaccount": "sottoconti",
     "subaccount-bad-codcuenta": "La subcuenta %codsubcuenta% tiene asignada una cuenta incorrecta.",
     "subaccount-belongs-other-year": "Il sottoconto 0 appartiene a un altro anno finanziario.",
-    "subaccount-irpf": "Account for deductions",
+    "subaccount-irpf": "Conto per deduzioni",
     "subaccount-irpf-creditor": "Subconto del creditore IRPF",
     "subaccount-not-found": "Account secondario 0 non trovato.",
     "subaccount-purchases": "Account for purchases",
@@ -1458,7 +1458,7 @@
     "supplied-amount": "supplied-amount",
     "supplied-subaccount-not-found": "Subcuenta non trovata",
     "supplier": "Fornitore",
-    "supplier-account-not-found": "supplier-account-not-found",
+    "supplier-account-not-found": "conto fornitore non trovato",
     "supplier-code": "supplier-code",
     "supplier-delivery-note": "Supplier delivery note",
     "supplier-delivery-notes": "Supplier delivery notes",
@@ -1582,7 +1582,7 @@
     "until-accounting-entry": "Fino alla registrazione contabile",
     "until-date": "until-date",
     "until-subaccount": "until-subaccount",
-    "update": "update",
+    "update": "aggiornare",
     "update-stock": "Aggiorna stock",
     "update-supplier-prices": "aggiornamento dei prezzi dei fornitori",
     "update-time": "update-time",
