--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -92,7 +92,7 @@
     "amount": "Importe",
     "amount-without-discount": "Cena bez zniżki",
     "and": "y",
-    "any": "Cualquier",
+    "any": "Dowolny",
     "any-group": "Dowolna grupa",
     "apache-module-not-found": "Módulo de apache no encontrado: %module%",
     "apc-clear": "APC wyczyszczone.",
@@ -119,7 +119,7 @@
     "attached-file": "Archivo adjunto",
     "attached-files": "Archivos adjuntos",
     "attribute": "Atributo",
-    "attribute-value-1": "Atributo 1",
+    "attribute-value-1": "Wartość atrybutu 1",
     "attribute-value-2": "Wartość atrybutu 2",
     "attribute-value-3": "Atributo 3",
     "attribute-value-4": "Atrybut 4",
@@ -142,7 +142,7 @@
     "badge": "Distintivo",
     "balance": "Saldo",
     "balance-account": "Balance Cuentas",
-    "balance-account-abreviated": "Balance Cuentas Abreviado",
+    "balance-account-abreviated": "Zrównoważony skrót konta",
     "balance-amounts": "Balance de Sumas y Saldos",
     "balance-sheet": "Balance de Situación",
     "balance-sheets": "Balances",
@@ -296,7 +296,7 @@
     "contact-data": "Dane kontaktowe",
     "contact-info": "Informacje kontaktowe",
     "contact-information": "Información de contacto",
-    "contact-person": "Persona de contacto",
+    "contact-person": "Osoba kontaktowa",
     "contacts": "Contactos",
     "context": "Kontekst",
     "continue": "Continuar",
@@ -415,7 +415,7 @@
     "delete-data": "Usuń dane",
     "delete-file": "Eliminar archivo",
     "delete-logs": "Usuń historię",
-    "delete-opening": "Eliminar el asiento de apertura",
+    "delete-opening": "Usuń otwarcie",
     "delete-record": "Eliminar registro",
     "Deleted": "Usunięto",
     "deleted-model": "Eliminado %model% (%key%) %desc%",
@@ -475,7 +475,7 @@
     "document-type": "Tipo documento",
     "document-type-valid-length": "Tipo de documento no válido (debe tener entre 1 y 20 carácteres).",
     "document-wildcard-info": "Documento indicado en la cabecera del asiento contable",
-    "document-without-total": "Dokument %document% bez sumy lub suma równa 0.",
+    "document-without-total": "Dokument %document% bez sumy lub z sumą równą 0.",
     "documentation": "Documentación",
     "documents": "Documentos",
     "documents-generated": "Documentos generados",
@@ -595,7 +595,7 @@
     "export-bill": "Factura de exportación",
     "extra-file": "Archivo extra",
     "failed": "Niepowodzenie",
-    "families": "Familias",
+    "families": "Rodziny",
     "family": "Familia",
     "family-code": "Código de la família",
     "fax": "Fax",
@@ -635,7 +635,7 @@
     "flag": "Bandera",
     "folder-not-writable": "No se puede escribir sobre la carpeta de FacturaScripts.",
     "font": "Fuente",
-    "font-size": "Tamaño fuente",
+    "font-size": "Rozmiar czcionki",
     "footer": "Stopka",
     "footer-text": "Texto pie de página",
     "for-admins": "Para administradores",
@@ -742,7 +742,7 @@
     "idaccount": "Id. Cuenta",
     "idem-wildcard-info": "Copiar el valor de la linea anterior",
     "image": "Imagen",
-    "images": "Imágenes",
+    "images": "Obrazy",
     "images-added-correctly": "%count% imágenes añadidas correctamente",
     "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
     "impacted-tax-subaccount": "Subcuenta impuesto repercutido",
@@ -823,7 +823,7 @@
     "key-google-maps": "Clave de Google Maps",
     "keys": "Klucze",
     "lang-code": "Código de idioma",
-    "language": "Idioma",
+    "language": "Język",
     "languages-ca_ES": "Catalán",
     "languages-cs_CZ": "Checo",
     "languages-de_DE": "Alemán",
@@ -893,7 +893,7 @@
     "locked": "Bloqueado",
     "log": "Log",
     "login": "Zaloguj się",
-    "login-cookie-fail": "Cookie de sesión no válida",
+    "login-cookie-fail": "Nieprawidłowy ciasteczko logowania",
     "login-image": "Imagen de login",
     "login-ok": "Sesión iniciada satisfactoriamente (cookie). Usuario: '%nick%'",
     "login-password-fail": "El usuario o la contraseña son incorrectos",
@@ -924,7 +924,7 @@
     "manual": "Instrukcja obsługi",
     "manufacturer": "Fabricante",
     "manufacturer-code": "Código de fabricante",
-    "manufacturers": "Fabricantes",
+    "manufacturers": "Producenci",
     "march": "Marzec",
     "margin": "Margen",
     "margin-top": "Márgen superior",
@@ -1010,7 +1010,7 @@
     "new-supplier": "Nuevo proveedor",
     "news": "Noticias",
     "next": "Siguiente",
-    "nick": "Apodo",
+    "nick": "Nick",
     "no": "No",
     "no-data": "Sin datos",
     "no-data-received-form": "Ningún dato recibido por formulario",
@@ -1121,7 +1121,7 @@
     "pct-irpf": "% IRPF",
     "pct-surcharge": "% nadpłaty",
     "pct-tax": "% podatku",
-    "pct-vat": "% Impuesto",
+    "pct-vat": "% VAT",
     "pending": "Pendiente",
     "pending-invoices-button": "Fact. Ptes:",
     "pending-orders-button": "Ped. Ptes:",
@@ -1171,7 +1171,7 @@
     "post-office-box": "Apartado",
     "postgresql": "PostgreSQL",
     "precio": "Cena",
-    "predefined-concepts": "Conceptos Predefinidos",
+    "predefined-concepts": "Predefiniowane pojęcia",
     "preferences": "Preferencias",
     "preview": "Previsualizar",
     "previous": "Poprzedni",
@@ -1444,7 +1444,7 @@
     "subaccount-sales": "Cuenta de ventas",
     "subaccounts": "Subcuentas",
     "subfamilies": "Subfamilias",
-    "subject": "Asunto",
+    "subject": "Temat",
     "subtotal": "Subtotal",
     "subtract": "Restar",
     "success": "Éxito",
@@ -1456,7 +1456,7 @@
     "sunday": "Domingo",
     "supplied": "Suplido",
     "supplied-amount": "Suplidos",
-    "supplied-subaccount-not-found": "Subcuenta de suplidos no encontrada",
+    "supplied-subaccount-not-found": "Podrachunek zaopatrzony nie znaleziony",
     "supplier": "Proveedor",
     "supplier-account-not-found": "Subcuenta de proveedor no encontrada",
     "supplier-code": "Cód. Proveedor",
@@ -1554,7 +1554,7 @@
     "translations": "Traducciones",
     "travel": "Viaje",
     "try-again-later": "Pruebe de nuevo más tarde",
-    "tuesday": "Martes",
+    "tuesday": "Wtorek",
     "type": "Tipo",
     "type-alert": "Tipo alert",
     "type-critical": "Tipo crítico",
@@ -1587,7 +1587,7 @@
     "update-supplier-prices": "Aktualizacja cen dostawców",
     "update-time": "Hora de actualización",
     "updated-model": "Actualizado %model% (%key%) %desc%",
-    "updater": "Actualizador",
+    "updater": "Aktualizacja",
     "updating-attached-relations": "Aktualizowanie powiązań załączonych plików",
     "upload-file": "Subir archivo",
     "uploaded-at": "Cargado en",
@@ -1659,7 +1659,7 @@
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "Kolumna X",
     "x-operation": "Operación sobre X",
-    "y-column": "Columna Y",
+    "y-column": "Kolumna Y",
     "year": "Año",
     "year-wildcard-info": "Año actual (de la fecha actual)",
     "yearly": "Anual",
