--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -222,7 +222,7 @@
     "chart": "Chart",
     "charts": "gráficos",
     "chat": "Chat",
-    "check-table": "Erro ao verificar a tabela '0'",
+    "check-table": "Erro ao verificar a tabela '%tableName%'",
     "check-vies": "Verificar VIES",
     "checked": "Checado",
     "children": "Criança",
@@ -532,7 +532,7 @@
     "epigraphs": "Epígrafes",
     "epigraphs-group": "Epígrafes de grupo",
     "equivalence": "Equivalência",
-    "equivalent-account-not-found": "Não foi possível encontrar uma conta equivalente a 0 no exercício 1 <a href='2'> Você importou o quadro das contas? <\/a>",
+    "equivalent-account-not-found": "Não foi possível encontrar uma conta equivalente a %accountCode% no exercício %exerciseCode%. Você importou o plano de contas?",
     "equivalent-subaccount-not-found": "Não foi encontrado nenhuma subconta equivalente a %subAccountCode% para copiar.",
     "error": "ERRO: %error%",
     "error-checking-vat-number": "Erro ao verificar o número '%vat-number%' no sistema VIES",
@@ -763,7 +763,7 @@
     "insert-update": "Inserir ou atualizar",
     "installed": "Instalado",
     "installed-plugins": "Instalados",
-    "installer": "Instalador do FacturaScripts 2018 (Alpha)",
+    "installer": "Instalador",
     "installer-p": "Bem-vindo ao instalador do FacturaScripts. Preencha os campos necessários para se conectar ao banco de dados.",
     "installer-requirements": "Os seguintes requisitos do instalador são necessários no FacturaScripts:",
     "integrity-check": "Integrity check",
@@ -1022,7 +1022,7 @@
     "no-reference": "Sin referencia",
     "no-selected-item": "Nenhum item selecionado",
     "no-stock": "Sem estoque",
-    "non-editable-accounting-entry": "non-editable-accounting-entry",
+    "non-editable-accounting-entry": "Asiento contábil não editável",
     "non-editable-columns": "Colunas não editáveis: %columns%",
     "non-editable-document": "Documento não editável",
     "none": "Nenhum",
@@ -1274,7 +1274,7 @@
     "related-subaccount-purchases-sales": "Subconta relacionada para compras e vendas",
     "reloading": "reloading",
     "remove-filter": "Eliminar filtros",
-    "remove-from-list": "remove-from-list",
+    "remove-from-list": "Remover da lista",
     "removing-logs-until": "Eliminando logs hasta el %date%",
     "renew": "Renovar",
     "renumber": "Renumerar",
