--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -159,7 +159,7 @@
     "billing-address": "Endereço de cobrança",
     "birth-date": "Data de nascimento",
     "birthday": "Aniversário",
-    "block-date": "Block date",
+    "block-date": "Data de bloqueio",
     "blocked": "Bloqueado",
     "blocked-date": "Bloqueado em",
     "body": "Corpo",
@@ -763,7 +763,7 @@
     "insert-update": "Añadir o modificar",
     "installed": "Instalado",
     "installed-plugins": "Instalados",
-    "installer": "Instalador do FacturaScripts 2018 (Alpha)",
+    "installer": "Instalador",
     "installer-p": "Bem-vindo ao instalador FacturaScripts. Preencha os campos necessários para se conectar ao banco de dados.",
     "installer-requirements": "As seguintes extensões e funções são necessárias para FacturaScripts:",
     "integrity-check": "Integrity check",
@@ -955,7 +955,7 @@
     "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
     "minimum-stock": "Estoque mínimo",
     "minutes": "Minutos",
-    "mismatched-accounting-entry": "mismatched-accounting-entry",
+    "mismatched-accounting-entry": "Asiento contábil desajustado",
     "missing-data-epigraph-group": "Faltando dados na epígrafe de grupo.",
     "missing-data-subaccount": "Falta dados na subconta.",
     "missing-epigraph-data": "Os dados estão faltando na epígrafe.",
@@ -1022,7 +1022,7 @@
     "no-reference": "Sin referencia",
     "no-selected-item": "Nenhum item selecionado",
     "no-stock": "Sem estoque",
-    "non-editable-accounting-entry": "non-editable-accounting-entry",
+    "non-editable-accounting-entry": "Asiento contábil não editável",
     "non-editable-columns": "Colunas não editáveis: %columns%",
     "non-editable-document": "Non editable document",
     "none": "Nenhum",
@@ -1570,7 +1570,7 @@
     "unchecked": "Sem checar",
     "under-minimums": "under-minimums",
     "undo": "Desfazer",
-    "unit-profit": "unit-profit",
+    "unit-profit": "Lucro unitário",
     "unit-purchase-price": "Preço de compra unitário",
     "unit-sale-price": "unit-sale-price",
     "unlimited": "Ilimitado",
