--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1179,7 +1179,7 @@
     "previous-documents": "Documents previs",
     "previous-quarter": "Trimestre anterior",
     "previously-purchased-from-supplier": "Comprat anteriorment al proveïdor",
-    "previously-sold-to-customer": "Vendido anteriormente al cliente",
+    "previously-sold-to-customer": "Venut anteriorment al client",
     "price": "Preu",
     "price-with-tax": "Preu + impostos",
     "principal": "Principal",
@@ -1393,7 +1393,7 @@
     "sketch-invoice-warning": "Esta factura todavía es un boceto. Hágala oficial cambiado su estado a emitida.",
     "small": "Menut",
     "smaller-than": "Més menut que",
-    "soap-extension-not-installed": "La extensión SOAP no está activada en PHP. Contacta con tu proveedor de hosting para activarla.",
+    "soap-extension-not-installed": "La extensió SOAP no està activada en PHP. Contacta amb el teu proveïdor d'allotjament per activar-la.",
     "social-security-number": "Número de la Seguritat Social",
     "sort": "Orde",
     "sort-by-column": "Ordenar por columna",
